added code for demo

--- a/demo-layout/organized-client-demo.ipynb
+++ b/demo-layout/organized-client-demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,6 +35,7 @@
     "# execute backtest script\n",
     "import os\n",
     "import sys\n",
+    "import glob\n",
     "\n",
     "sys.path.append(\"../jupyter-py/\")\n",
     "from decode_logs import *\n",
@@ -50,16 +51,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = Decoder.get_strategy_status(output_dir)"
+    "stock_list = glob.glob(\"../ib-data/nyse-daily-tech/*.csv\")\n",
+    "for i, file in enumerate(stock_list):\n",
+    "    stock_list[i] = os.path.basename(file)[:-4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, action_df = Decoder.get_strategy_status(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +88,6 @@
     "HEIGHT = 250\n",
     "SLIDER_HEIGHT = 150\n",
     "WIDTH = 600\n",
-    "\n",
     "\n",
     "# ========== data ============= #\n",
     "# use sample data from ib-data folder\n",
@@ -117,24 +128,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'elements' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-26d63c37b81d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;31m# you just put in column name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m \u001b[0msource\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColumnDataSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melements\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;31m# plot the POINT coords of the ACTIONS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'elements' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div style=\"display: table;\"><div style=\"display: table-row;\"><div style=\"display: table-cell;\"><b title=\"bokeh.models.ranges.Range1d\">Range1d</b>(</div><div style=\"display: table-cell;\">id&nbsp;=&nbsp;'8546', <span id=\"8626\" style=\"cursor: pointer;\">&hellip;)</span></div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">bounds&nbsp;=&nbsp;None,</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">callback&nbsp;=&nbsp;None,</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">end&nbsp;=&nbsp;numpy.datetime64('2018-12-31T00:00:00.000000000'),</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">js_event_callbacks&nbsp;=&nbsp;{},</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">js_property_callbacks&nbsp;=&nbsp;{},</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">max_interval&nbsp;=&nbsp;None,</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">min_interval&nbsp;=&nbsp;None,</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">name&nbsp;=&nbsp;None,</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">reset_end&nbsp;=&nbsp;None,</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">reset_start&nbsp;=&nbsp;None,</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">start&nbsp;=&nbsp;numpy.datetime64('2018-12-17T00:00:00.000000000'),</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">subscribed_events&nbsp;=&nbsp;[],</div></div><div class=\"8625\" style=\"display: none;\"><div style=\"display: table-cell;\"></div><div style=\"display: table-cell;\">tags&nbsp;=&nbsp;[])</div></div></div>\n",
+       "<script>\n",
+       "(function() {\n",
+       "  var expanded = false;\n",
+       "  var ellipsis = document.getElementById(\"8626\");\n",
+       "  ellipsis.addEventListener(\"click\", function() {\n",
+       "    var rows = document.getElementsByClassName(\"8625\");\n",
+       "    for (var i = 0; i < rows.length; i++) {\n",
+       "      var el = rows[i];\n",
+       "      el.style.display = expanded ? \"none\" : \"table-row\";\n",
+       "    }\n",
+       "    ellipsis.innerHTML = expanded ? \"&hellip;)\" : \"&lsaquo;&lsaquo;&lsaquo;\";\n",
+       "    expanded = !expanded;\n",
+       "  });\n",
+       "})();\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "Range1d(id='8546', ...)"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "normp.x_range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# CODE SECTION: spread plot, figure name = spread_p\n",
-    "\n",
+    "import bokeh.models as bkm\n",
     "# ========== themes & appearance ============= #\n",
     "\n",
     "palette = [\"#053061\", \"#67001f\"]\n",
@@ -149,7 +186,7 @@
     "# TODO: map actions to colours so can map to palette[i]\n",
     "# dates = np.array(data['date'], dtype=np.datetime64)\n",
     "spread_source = ColumnDataSource(data=dict(date=dates, spread=data['spread']))\n",
-    "# action_source = \n",
+    "action_source = ColumnDataSource(action_df)\n",
     "# action_source['colors'] = [palette[i] x for x in action_source['actions']]\n",
     "\n",
     "\n",
@@ -163,25 +200,25 @@
     "spread_p.yaxis.axis_label = \"Spread\"\n",
     "# spread_p.grid.grid_line_color = \"white\"\n",
     "\n",
-    "# you need to @ the column name of the dataframe, and you pass the dataframe as a \"source\" variable (see below)\n",
-    "# format: <name that appears>, @<column_name>\n",
-    "spread_p.hover.tooltips = [ names = ['hover_actions'],\n",
-    "    (\"Action\", \"@action\"),                    \n",
-    "    (\"Stock Bought\", \"@buy_stk\"),\n",
-    "    (\"Bought Amount\", \"@buy_amt\"),\n",
-    "    (\"Stock Sold\", \"@sell_stk\"),\n",
-    "    (\"Sold Amount\", \"@sell_amt\")\n",
-    "]\n",
-    "\n",
     "\n",
     "# ========== plot data points ============= #\n",
     "\n",
     "# plot the POINT coords of the ACTIONS\n",
-    "spread_p.circle(\"date\", \"spread\", size=12, source=action_source,\n",
-    "         color='colors', line_color='color', fill_alpha=0.8, names='hover_actions')\n",
+    "circles = spread_p.circle(\"date\", \"spread\", size=12, source=action_source, fill_alpha=0.8)\n",
+    "\n",
+    "circles_hover = bkm.HoverTool(renderers=[circles], tooltips = [\n",
+    "    (\"Action\", \"@latest_trade_action\"),                    \n",
+    "    (\"Stock Bought\", \"@buy_stk\"),\n",
+    "    (\"Bought Amount\", \"@buy_amt\"),\n",
+    "    (\"Stock Sold\", \"@sell_stk\"),\n",
+    "    (\"Sold Amount\", \"@sell_amt\")\n",
+    "    ])\n",
+    "\n",
+    "spread_p.add_tools(circles_hover)\n",
     "\n",
     "# plot the spread over time\n",
-    "normp.line('date', 'spread', source=spread_source, line_color = LINE_COLOR, line_width = LINE_WIDTH)\n",
+    "spread_p.line('date', 'spread', source=spread_source, line_color = LINE_COLOR, line_width = LINE_WIDTH)\n",
+    "spread_p.xaxis[0].formatter = DatetimeTickFormatter()\n",
     "\n",
     "# ========== plot label ============= #\n",
     "# this part you just need to pass BUY or SELL actions\n",
@@ -197,24 +234,29 @@
     "# ========== RANGE SELECT TOOL ============= #\n",
     "# not included for now because sample data x-axis is not datetime. PLS FIX\n",
     "\n",
-    "select = figure(title=\"Drag the middle and edges of the selection box to change the range above\",\n",
-    "                plot_height=SLIDER_HEIGHT, plot_width=WIDTH, y_range=spread_p.y_range, background_fill_color=\"#efefef\")\n",
+    "# select = figure(title=\"Drag the middle and edges of the selection box to change the range above\",\n",
+    "#                 plot_height=SLIDER_HEIGHT, \n",
+    "#                 plot_width=WIDTH, \n",
+    "#                 y_range=spread_p.y_range, \n",
+    "#                 x_axis_type=\"datetime\", \n",
+    "#                 y_axis_type=None,\n",
+    "#                 background_fill_color=\"#efefef\")\n",
     "\n",
-    "range_tool = RangeTool(x_range=spread_p.x_range)\n",
-    "range_tool.overlay.fill_color = \"navy\"\n",
-    "range_tool.overlay.fill_alpha = 0.2\n",
+    "# range_tool = RangeTool(x_range=spread_p.x_range)\n",
+    "# range_tool.overlay.fill_color = \"navy\"\n",
+    "# range_tool.overlay.fill_alpha = 0.2\n",
     "\n",
-    "select.line('date', 'spread', source=spread_source, line_color = LINE_COLOR, line_width = LINE_WIDTH)\n",
-    "select.ygrid.grid_line_color = None\n",
-    "select.add_tools(range_tool)\n",
-    "select.toolbar.active_multi = range_tool\n",
+    "# select.line('date', 'spread', source=spread_source, line_color = LINE_COLOR, line_width = LINE_WIDTH)\n",
+    "# select.ygrid.grid_line_color = None\n",
+    "# select.add_tools(range_tool)\n",
+    "# select.toolbar.active_multi = range_tool\n",
     "\n",
     "# show(column(spread_p,select))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,13 +293,11 @@
     "WIDGET_WIDTH = 250\n",
     "\n",
     "# ========== Select Stocks ============= #\n",
-    "stock_list = ['AAPL', 'GOOGL', 'IBM']\n",
     "select_stk_1 = Select(width = WIDGET_WIDTH, title='Select Stock 1:', value = stock_list[0], options=stock_list)\n",
     "select_stk_2 = Select(width = WIDGET_WIDTH, title='Select Stock 2:', value = stock_list[0], options=stock_list)\n",
     "\n",
-    "\n",
     "# ========== Strategy Type ============= #\n",
-    "strategy_list = ['Make money', 'Do Cocaine', 'Models and Bottles']\n",
+    "strategy_list = ['kalman', 'distance', 'cointegration']\n",
     "select_strategy = Select(width = WIDGET_WIDTH, title='Select Strategy:', value = strategy_list[0], options=strategy_list)\n",
     "\n",
     "# ========== set start/end date ============= #\n",
@@ -278,9 +318,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-134-c4296ad340a0>, line 32)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-134-c4296ad340a0>\"\u001b[0;36m, line \u001b[0;32m32\u001b[0m\n\u001b[0;31m    start_bt.on_click(run_backtest)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "# CODE SECTION: setup on_update functions\n",
     "\n",
@@ -318,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,6 +386,29 @@
     "curdoc().add_root(grid)\n",
     "# curdoc().title = \"DEMO\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
