edited .gitignore, added code to decode performance metrics from log file

--- a/jupyter-py/8a-Decode-Log-files.ipynb
+++ b/jupyter-py/8a-Decode-Log-files.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,14 +21,14 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "output_dir = \"tmp/\" + get_current_time()\n",
-    "strategy_type = \"distance\"\n",
+    "strategy_type = \"kalman\"\n",
     "execution_command = \"python backtest_pair.py --strategy_type {} --output_dir {}\".format(strategy_type, output_dir)\n",
     "\n",
     "os.system(\"rm -rf tmp\")\n",
@@ -37,16 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1, df2 = Decoder.get_strategy_status(output_dir)"
+    "df1, df2 = Decoder.get_strategy_status(output_dir)\n",
+    "dic = Decoder.get_strategy_performance(output_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +72,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>allow_trade</th>\n",
+       "      <th>alpha</th>\n",
        "      <th>buy_amt</th>\n",
        "      <th>buy_stk</th>\n",
        "      <th>data0</th>\n",
@@ -79,15 +81,14 @@
        "      <th>enter_threshold_size</th>\n",
        "      <th>exit_threshold_size</th>\n",
        "      <th>initial_cash</th>\n",
-       "      <th>initial_long_pv</th>\n",
        "      <th>...</th>\n",
+       "      <th>portfolio_value</th>\n",
        "      <th>qty0</th>\n",
        "      <th>qty1</th>\n",
-       "      <th>resid_mean</th>\n",
-       "      <th>resid_std</th>\n",
        "      <th>sell_amt</th>\n",
        "      <th>sell_stk</th>\n",
        "      <th>spread</th>\n",
+       "      <th>spread_std</th>\n",
        "      <th>status</th>\n",
        "      <th>up_medium</th>\n",
        "      <th>upper_limit</th>\n",
@@ -96,31 +97,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>True</td>\n",
-       "      <td>33104.0</td>\n",
-       "      <td>AAN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.825526</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>40.275</td>\n",
        "      <td>51.795</td>\n",
        "      <td>2018-05-01</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>999958.5225</td>\n",
-       "      <td>666631.8</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>16552</td>\n",
-       "      <td>12871</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>25742.0</td>\n",
-       "      <td>AER</td>\n",
-       "      <td>-11.52</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-3.517627</td>\n",
-       "      <td>0.760291</td>\n",
+       "      <td>-0.003483</td>\n",
+       "      <td>0.046979</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.023489</td>\n",
+       "      <td>0.093958</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
+       "      <td>0.825526</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>40.815</td>\n",
@@ -128,23 +130,23 @@
        "      <td>2018-05-02</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>999958.5225</td>\n",
-       "      <td>666631.8</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>16552</td>\n",
-       "      <td>12871</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
-       "      <td>-11.53</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-3.517627</td>\n",
-       "      <td>0.760291</td>\n",
+       "      <td>0.001116</td>\n",
+       "      <td>0.046979</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.023489</td>\n",
+       "      <td>0.093958</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>True</td>\n",
+       "      <td>0.829269</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>40.485</td>\n",
@@ -153,46 +155,46 @@
        "      <td>2.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
+       "      <td>1000000.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
-       "      <td>-13.14</td>\n",
+       "      <td>-0.027802</td>\n",
+       "      <td>0.046979</td>\n",
        "      <td>0</td>\n",
-       "      <td>-3.517627</td>\n",
-       "      <td>0.760291</td>\n",
+       "      <td>0.023489</td>\n",
+       "      <td>0.093958</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>True</td>\n",
-       "      <td>31360.0</td>\n",
-       "      <td>AAN</td>\n",
+       "      <td>0.628990</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>41.555</td>\n",
        "      <td>54.165</td>\n",
        "      <td>2018-05-04</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>977357.7925</td>\n",
-       "      <td>651582.4</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>15680</td>\n",
-       "      <td>12029</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>24058.0</td>\n",
-       "      <td>AER</td>\n",
-       "      <td>-12.61</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-3.623532</td>\n",
-       "      <td>1.572671</td>\n",
+       "      <td>0.012612</td>\n",
+       "      <td>0.046979</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.023489</td>\n",
+       "      <td>0.093958</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>True</td>\n",
+       "      <td>0.690333</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>40.365</td>\n",
@@ -201,57 +203,56 @@
        "      <td>2.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
+       "      <td>1000000.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
-       "      <td>-13.79</td>\n",
+       "      <td>-0.025299</td>\n",
+       "      <td>0.046979</td>\n",
        "      <td>0</td>\n",
-       "      <td>-3.623532</td>\n",
-       "      <td>1.572671</td>\n",
+       "      <td>0.023489</td>\n",
+       "      <td>0.093958</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
+       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   allow_trade  buy_amt buy_stk   data0   data1       date  \\\n",
-       "0         True  33104.0     AAN  40.275  51.795 2018-05-01   \n",
-       "1         True      NaN    None  40.815  52.345 2018-05-02   \n",
-       "2         True      NaN    None  40.485  53.625 2018-05-03   \n",
-       "3         True  31360.0     AAN  41.555  54.165 2018-05-04   \n",
-       "4         True      NaN    None  40.365  54.155 2018-05-07   \n",
+       "   allow_trade     alpha  buy_amt buy_stk   data0   data1       date  \\\n",
+       "0        False  0.825526      NaN    None  40.275  51.795 2018-05-01   \n",
+       "1         True  0.825526      NaN    None  40.815  52.345 2018-05-02   \n",
+       "2         True  0.829269      NaN    None  40.485  53.625 2018-05-03   \n",
+       "3         True  0.628990      NaN    None  41.555  54.165 2018-05-04   \n",
+       "4         True  0.690333      NaN    None  40.365  54.155 2018-05-07   \n",
        "\n",
-       "   enter_threshold_size  exit_threshold_size  initial_cash  initial_long_pv  \\\n",
-       "0                   2.0                  0.5   999958.5225         666631.8   \n",
-       "1                   2.0                  0.5   999958.5225         666631.8   \n",
-       "2                   2.0                  0.5           NaN              NaN   \n",
-       "3                   2.0                  0.5   977357.7925         651582.4   \n",
-       "4                   2.0                  0.5           NaN              NaN   \n",
+       "   enter_threshold_size  exit_threshold_size  initial_cash     ...       \\\n",
+       "0                   2.0                  0.5           NaN     ...        \n",
+       "1                   2.0                  0.5           NaN     ...        \n",
+       "2                   2.0                  0.5           NaN     ...        \n",
+       "3                   2.0                  0.5           NaN     ...        \n",
+       "4                   2.0                  0.5           NaN     ...        \n",
        "\n",
-       "      ...        qty0  qty1   resid_mean resid_std  sell_amt  sell_stk  \\\n",
-       "0     ...       16552  12871        None      None   25742.0       AER   \n",
-       "1     ...       16552  12871        None      None       NaN      None   \n",
-       "2     ...           0      0        None      None       NaN      None   \n",
-       "3     ...       15680  12029        None      None   24058.0       AER   \n",
-       "4     ...           0      0        None      None       NaN      None   \n",
+       "   portfolio_value  qty0  qty1  sell_amt  sell_stk    spread  spread_std  \\\n",
+       "0        1000000.0     0     0       NaN      None -0.003483    0.046979   \n",
+       "1        1000000.0     0     0       NaN      None  0.001116    0.046979   \n",
+       "2        1000000.0     0     0       NaN      None -0.027802    0.046979   \n",
+       "3        1000000.0     0     0       NaN      None  0.012612    0.046979   \n",
+       "4        1000000.0     0     0       NaN      None -0.025299    0.046979   \n",
        "\n",
-       "   spread  status  up_medium  upper_limit  \n",
-       "0  -11.52       2  -3.517627     0.760291  \n",
-       "1  -11.53       2  -3.517627     0.760291  \n",
-       "2  -13.14       0  -3.517627     0.760291  \n",
-       "3  -12.61       2  -3.623532     1.572671  \n",
-       "4  -13.79       0  -3.623532     1.572671  \n",
+       "   status  up_medium  upper_limit  \n",
+       "0       0   0.023489     0.093958  \n",
+       "1       0   0.023489     0.093958  \n",
+       "2       0   0.023489     0.093958  \n",
+       "3       0   0.023489     0.093958  \n",
+       "4       0   0.023489     0.093958  \n",
        "\n",
-       "[5 rows x 30 columns]"
+       "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -299,20 +300,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-11.520</td>\n",
-       "      <td>2018-05-01</td>\n",
-       "      <td>long_spread</td>\n",
-       "      <td>AER</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.101615</td>\n",
+       "      <td>2018-07-26</td>\n",
+       "      <td>short_spread</td>\n",
        "      <td>AAN</td>\n",
-       "      <td>33104.0</td>\n",
-       "      <td>25742.0</td>\n",
+       "      <td>AER</td>\n",
+       "      <td>23650.0</td>\n",
+       "      <td>27300.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>-13.140</td>\n",
-       "      <td>2018-05-03</td>\n",
+       "      <td>61</td>\n",
+       "      <td>-0.016250</td>\n",
+       "      <td>2018-07-27</td>\n",
        "      <td>exit_spread</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -321,20 +322,20 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>-12.610</td>\n",
-       "      <td>2018-05-04</td>\n",
+       "      <td>62</td>\n",
+       "      <td>-0.118242</td>\n",
+       "      <td>2018-07-30</td>\n",
        "      <td>long_spread</td>\n",
        "      <td>AER</td>\n",
        "      <td>AAN</td>\n",
-       "      <td>31360.0</td>\n",
-       "      <td>24058.0</td>\n",
+       "      <td>34242.0</td>\n",
+       "      <td>25654.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>-13.790</td>\n",
-       "      <td>2018-05-07</td>\n",
+       "      <td>69</td>\n",
+       "      <td>-0.021204</td>\n",
+       "      <td>2018-08-08</td>\n",
        "      <td>exit_spread</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -343,64 +344,20 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>-15.410</td>\n",
-       "      <td>2018-05-08</td>\n",
+       "      <td>124</td>\n",
+       "      <td>-0.098352</td>\n",
+       "      <td>2018-10-25</td>\n",
        "      <td>long_spread</td>\n",
        "      <td>AER</td>\n",
        "      <td>AAN</td>\n",
-       "      <td>31370.0</td>\n",
-       "      <td>22538.0</td>\n",
+       "      <td>34578.0</td>\n",
+       "      <td>30518.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>60</td>\n",
-       "      <td>-7.535</td>\n",
-       "      <td>2018-07-26</td>\n",
-       "      <td>exit_spread</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>76</td>\n",
-       "      <td>-7.350</td>\n",
-       "      <td>2018-08-17</td>\n",
-       "      <td>short_spread</td>\n",
-       "      <td>AAN</td>\n",
-       "      <td>AER</td>\n",
-       "      <td>25488.0</td>\n",
-       "      <td>29294.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>78</td>\n",
-       "      <td>-6.880</td>\n",
-       "      <td>2018-08-21</td>\n",
-       "      <td>exit_spread</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>79</td>\n",
-       "      <td>-6.290</td>\n",
-       "      <td>2018-08-22</td>\n",
-       "      <td>short_spread</td>\n",
-       "      <td>AAN</td>\n",
-       "      <td>AER</td>\n",
-       "      <td>24990.0</td>\n",
-       "      <td>28086.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>80</td>\n",
-       "      <td>-5.830</td>\n",
-       "      <td>2018-08-23</td>\n",
+       "      <td>130</td>\n",
+       "      <td>-0.011067</td>\n",
+       "      <td>2018-11-02</td>\n",
        "      <td>exit_spread</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -412,32 +369,24 @@
        "</div>"
       ],
       "text/plain": [
-       "   index  spread       date latest_trade_action sell_stk buy_stk  buy_amt  \\\n",
-       "0      0 -11.520 2018-05-01         long_spread      AER     AAN  33104.0   \n",
-       "1      2 -13.140 2018-05-03         exit_spread     None    None      NaN   \n",
-       "2      3 -12.610 2018-05-04         long_spread      AER     AAN  31360.0   \n",
-       "3      4 -13.790 2018-05-07         exit_spread     None    None      NaN   \n",
-       "4      5 -15.410 2018-05-08         long_spread      AER     AAN  31370.0   \n",
-       "5     60  -7.535 2018-07-26         exit_spread     None    None      NaN   \n",
-       "6     76  -7.350 2018-08-17        short_spread      AAN     AER  25488.0   \n",
-       "7     78  -6.880 2018-08-21         exit_spread     None    None      NaN   \n",
-       "8     79  -6.290 2018-08-22        short_spread      AAN     AER  24990.0   \n",
-       "9     80  -5.830 2018-08-23         exit_spread     None    None      NaN   \n",
+       "   index    spread       date latest_trade_action sell_stk buy_stk  buy_amt  \\\n",
+       "0     60  0.101615 2018-07-26        short_spread      AAN     AER  23650.0   \n",
+       "1     61 -0.016250 2018-07-27         exit_spread     None    None      NaN   \n",
+       "2     62 -0.118242 2018-07-30         long_spread      AER     AAN  34242.0   \n",
+       "3     69 -0.021204 2018-08-08         exit_spread     None    None      NaN   \n",
+       "4    124 -0.098352 2018-10-25         long_spread      AER     AAN  34578.0   \n",
+       "5    130 -0.011067 2018-11-02         exit_spread     None    None      NaN   \n",
        "\n",
        "   sell_amt  \n",
-       "0   25742.0  \n",
+       "0   27300.0  \n",
        "1       NaN  \n",
-       "2   24058.0  \n",
+       "2   25654.0  \n",
        "3       NaN  \n",
-       "4   22538.0  \n",
-       "5       NaN  \n",
-       "6   29294.0  \n",
-       "7       NaN  \n",
-       "8   28086.0  \n",
-       "9       NaN  "
+       "4   30518.0  \n",
+       "5       NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,6 +394,40 @@
    "source": [
     "df2.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'avg_holding_period': 4.666666666666667,\n",
+       " 'endcash': 1177419.7167409933,\n",
+       " 'n_trades': 3,\n",
+       " 'pair': 'AAN-AER',\n",
+       " 'profit': 0.17741971674099333,\n",
+       " 'returnstd': 7361.272303626742,\n",
+       " 'sharperatio': None,\n",
+       " 'startcash': 1000000}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
