--- a/demo-layout/organized-client-demo.ipynb
+++ b/demo-layout/organized-client-demo.ipynb
@@ -413,9 +413,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:fyp]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-fyp-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -427,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
