--- a/demo-layout/organized-client-demo.ipynb
+++ b/demo-layout/organized-client-demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +62,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data, action_df = Decoder.get_strategy_status(output_dir)"
+    "data, action_df = Decoder.get_strategy_status(output_dir)\n",
+    "metrics = Decoder.get_strategy_performance(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'avg_holding_period': 4.666666666666667,\n",
+       " 'endcash': 1177419.7167409933,\n",
+       " 'n_trades': 3,\n",
+       " 'pair': 'AAN-AER',\n",
+       " 'profit': 0.17741971674099333,\n",
+       " 'returnstd': 7361.272303626742,\n",
+       " 'sharperatio': None,\n",
+       " 'startcash': 1000000}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics"
    ]
   },
   {
@@ -185,6 +213,7 @@
     "# TODO: get action_source array\n",
     "# TODO: map actions to colours so can map to palette[i]\n",
     "# dates = np.array(data['date'], dtype=np.datetime64)\n",
+    "dates = np.array(data['date'], dtype=np.datetime64)\n",
     "spread_source = ColumnDataSource(data=dict(date=dates, spread=data['spread']))\n",
     "action_source = ColumnDataSource(action_df)\n",
     "# action_source['colors'] = [palette[i] x for x in action_source['actions']]\n",
@@ -310,11 +339,49 @@
     "\n",
     "backtest_dates = DateRangeSlider(width = WIDGET_WIDTH, start=MAX_START, end=MAX_END, value=(DEFAULT_START, DEFAULT_END), step=STEP, title=\"Backtest Date Range:\")\n",
     "\n",
-    "start_bt = Button(label=\"Backtest\", button_type=\"success\", width = WIDTH)\n",
+    "start_bt = Button(label=\"Backtest\", button_type=\"success\", width = WIDGET_WIDTH)\n",
     "\n",
     "# controls = column(select_stk_1, select_stk_2, select_strategy, backtest_dates, start_bt)\n",
     "controls_wb = widgetbox(select_stk_1, select_stk_2, select_strategy, backtest_dates, start_bt, width=600)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CODE SECTION: Final layout\n",
+    "grid = gridplot([[controls_wb, normp_p], [pv_p, spread_p]], sizing_mode='fixed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CODE SECTION: return curdoc\n",
+    "\n",
+    "curdoc().add_root(grid)\n",
+    "# curdoc().title = \"DEMO\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -367,41 +434,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/brendantham/Desktop/FYP/statistical-arbitrage-private-18-19/demo-layout'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# CODE SECTION: Final layout\n",
-    "grid = gridplot([[controls_wb, normp_p], [pv_p, spread_p]], sizing_mode='fixed')"
+    "os.getcwd()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# CODE SECTION: return curdoc\n",
-    "\n",
-    "curdoc().add_root(grid)\n",
-    "# curdoc().title = \"DEMO\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show(grid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -413,9 +462,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:fyp]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-fyp-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -427,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
