edited grid search and client_demo

--- a/jupyter_py/8a-Decode-Log-files.ipynb
+++ b/jupyter_py/8a-Decode-Log-files.ipynb
@@ -626,17 +626,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import datetime "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2018, 1, 1)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.strptime(\"2018-01-01\", \"%Y-%m-%d\").date()"
+   ]
   },
   {
    "cell_type": "code",
