--- a/jupyter_py/7b-Generate-Plots.ipynb
+++ b/jupyter_py/7b-Generate-Plots.ipynb
@@ -274,9 +274,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (Intel, 2018 update 2)",
+   "display_name": "Python [conda env:fyp2019]",
    "language": "python",
-   "name": "c009-intel_distribution_of_python_3_2018u2"
+   "name": "conda-env-fyp2019-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -288,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
